changed subit button to regualr button

--- a/Views/Content/contact.html
+++ b/Views/Content/contact.html
@@ -32,7 +32,7 @@
       <label class="form-check-label" for="subscribeCheckbox"> Subscribe to our Contact List</label>
     </div>
 
-    <button id="sendButton" type="submit" class="btn btn-primary"><i class="fas fa-envelope fa-lg"></i> Send</button>
+    <button id="sendButton" type="button" class="btn btn-primary"><i class="fas fa-envelope fa-lg"></i> Send</button>
     <button id="cancelButton" type="reset" class="btn btn-warning"><i class="fas fa-undo fa-lg"></i> Cancel</button>
   </form>
 </div>
